--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -41,7 +41,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types"
+    "from google_cloud_pipeline_components.types import artifact_types\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_2065718\"\n"
+    "PIPELINE_ROOT = \"gs://data_de2023_2065718\""
    ]
   },
   {
@@ -114,7 +114,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")"
+    "    logging.info(\"Downloaded Data!\")\n"
    ]
   },
   {
@@ -157,7 +157,7 @@
     "    X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "    pca_df = pca.fit_transform(scaled_features)\n",
     "    result = pd.concat([pca_df, test_features], axis=1)\n",
     "\n",
-    "    result.to_csv(pca_features.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    result.to_csv(pca_features.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -301,7 +301,7 @@
     "        pickle.dump(rf_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -385,7 +385,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -429,7 +429,7 @@
     "    y_pred = model_rf.predict(X_test)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -475,7 +475,7 @@
     "    y_pred = model_gbc.predict(X_test)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -505,7 +505,7 @@
     "    if rf_metrics.get(\"f1_score\") > gbc_metrics.get(\"f1_score\"):\n",
     "        return \"rf\"\n",
     "    else:\n",
-    "        return \"gbc\""
+    "        return \"gbc\"\n"
    ]
   },
   {
@@ -542,7 +542,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
    ]
   },
   {
@@ -621,7 +621,7 @@
     "            project_id=project_id,\n",
     "            model_repo=model_repo,\n",
     "            model=training_gbc_job_run_op.outputs[\"out_model\"],\n",
-    "        ).after(predict_gbc_job_run_op)"
+    "        ).after(predict_gbc_job_run_op)\n"
    ]
   },
   {
@@ -644,7 +644,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -681,13 +681,13 @@
     "    parameter_values={\n",
     "        \"project_id\": PROJECT_ID,  # makesure to use your project id\n",
     "        \"data_bucket\": \"data_de2023_2065718\",  # makesure to use your data bucket name\n",
-    "        \"dataset_filename\": \"training_set.csv\",  # makesure to upload these to your data bucket from DE2023\n",
-    "        \"testset_filename\": \"prediction_set.csv\",  # makesure to upload these to your data bucket from DE2023\n",
+    "        \"dataset_filename\": \"train_data.csv\",  # makesure to upload these to your data bucket from DE2023\n",
+    "        \"testset_filename\": \"predict_data.csv\",  # makesure to upload these to your data bucket from DE2023\n",
     "        \"model_repo\": \"models_de2023_2065718\",  # makesure to use your model bucket name\n",
     "    },\n",
     ")\n",
     "\n",
-    "job.run()"
+    "job.run()\n"
    ]
   }
  ],
