--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -108,7 +108,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types\n"
+    "from google_cloud_pipeline_components.types import artifact_types"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_2065718\""
+    "PIPELINE_ROOT = \"gs://data_de2023_2065718\"\n"
    ]
   },
   {
@@ -169,7 +169,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")\n"
+    "    logging.info(\"Downloaded Data!\")"
    ]
   },
   {
@@ -197,7 +197,6 @@
     "    dataset_train_y: Output[Dataset],\n",
     "    dataset_test_y: Output[Dataset],\n",
     "    level: float,\n",
-    "    method: bool\n",
     "):\n",
     "    \"\"\"train_test_split\"\"\"\n",
     "    import pandas as pd\n",
@@ -208,21 +207,16 @@
     "    logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "\n",
     "    alldata = pd.read_csv(dataset.path + \".csv\", index_col=None)\n",
-    "    if method: \n",
-    "        train, test = tts(\n",
-    "            alldata, test_size=level, random_state=6\n",
-    "        )\n",
-    "        train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "        test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    else:\n",
-    "        X_train, X_test, y_train, y_test = tts(\n",
-    "            alldata.drop(\"quality\", axis = 1), alldata[\"quality\"], test_size=level, random_state=6\n",
-    "        )\n",
-    "        X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "        X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "        y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "        y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    \n"
+    "    X_train, X_test, y_train, y_test = tts(\n",
+    "        alldata.drop(\"quality\", axis=1),\n",
+    "        alldata[\"quality\"],\n",
+    "        test_size=level,\n",
+    "        random_state=6,\n",
+    "    )\n",
+    "    X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "    X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "    y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -243,7 +237,12 @@
     "@dsl.component(\n",
     "    packages_to_install=[\"pandas\", \"scikit-learn\"], base_image=\"python:3.10.7-slim\"\n",
     ")\n",
-    "def PCA(standard_features: Input[Dataset], pca_features: Output[Dataset]):\n",
+    "def PCA(\n",
+    "    standard_features: Input[Dataset],\n",
+    "    pca_features: Output[Dataset],\n",
+    "    scaler_model: Output[Model],\n",
+    "    pca_model: Output[Model],\n",
+    "):\n",
     "    \"\"\" \"\"\"\n",
     "\n",
     "    from sklearn.decomposition import PCA\n",
@@ -261,19 +260,31 @@
     "    scaler = StandardScaler()\n",
     "\n",
     "    features = pd.read_csv(standard_features.path + \".csv\")\n",
-    "    train_features = features.drop(\"quality\", axis = 1)\n",
+    "    train_features = features.drop(\"quality\", axis=1)\n",
     "    test_features = features[[\"quality\"]]\n",
+    "    scaler.fit(train_features)\n",
     "    scaled_features = pd.DataFrame(\n",
-    "        scaler.fit_transform(train_features),\n",
+    "        scaler.transform(train_features),\n",
     "        columns=train_features.columns,\n",
     "        index=train_features.index,\n",
     "    )\n",
     "\n",
     "    pca = PCA(n_components=0.1, svd_solver=\"full\")\n",
-    "    pca_df = pd.DataFrame(pca.fit_transform(scaled_features))\n",
+    "    pca.fit(scaled_features)\n",
+    "    pca_df = pd.DataFrame(pca.transform(scaled_features))\n",
     "    result = pd.concat([pca_df, test_features], axis=1)\n",
     "\n",
-    "    result.to_csv(pca_features.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    result.to_csv(pca_features.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "\n",
+    "    # Save the scaler\n",
+    "    s_file = scaler_model.path + \".pkl\"\n",
+    "    with open(s_file, \"wb\") as f:\n",
+    "        pickle.dump(scaler, f)\n",
+    "\n",
+    "        # Save the scaler\n",
+    "    p_file = pca_model.path + \".pkl\"\n",
+    "    with open(p_file, \"wb\") as f:\n",
+    "        pickle.dump(pca, f)"
    ]
   },
   {
@@ -340,9 +351,9 @@
     "    y_pred = rf_gs.predict(X_test)\n",
     "    metrics_dict = {\n",
     "        \"accuracy\": accuracy_score(y_test, y_pred),\n",
-    "        \"precision\": precision_score(y_test, y_pred, average=\"micro\"),\n",
-    "        \"recall\": recall_score(y_test, y_pred, average=\"micro\"),\n",
-    "        \"f1_score\": f1_score(y_test, y_pred, average=\"micro\"),\n",
+    "        \"precision\": precision_score(y_test, y_pred, average=\"weighted\"),\n",
+    "        \"recall\": recall_score(y_test, y_pred, average=\"weighted\"),\n",
+    "        \"f1_score\": f1_score(y_test, y_pred, average=\"weighted\"),\n",
     "    }\n",
     "\n",
     "    logging.info(metrics_dict)\n",
@@ -357,7 +368,7 @@
     "        pickle.dump(rf_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -409,7 +420,6 @@
     "        \"criterion\": [\"friedman_mse\", \"squared_error\"],\n",
     "        \"min_samples_split\": [2, 5, 10],\n",
     "        \"min_samples_leaf\": [1, 5, 10],\n",
-    "        \"loss\": [\"log_loss\", \"exponential\"]\n",
     "    }\n",
     "\n",
     "    gbc = GradientBoostingClassifier(random_state=6)\n",
@@ -425,9 +435,9 @@
     "    y_pred = gbc_gs.predict(X_test)\n",
     "    metrics_dict = {\n",
     "        \"accuracy\": accuracy_score(y_test, y_pred),\n",
-    "        \"precision\": precision_score(y_test, y_pred, average=\"micro\"),\n",
-    "        \"recall\": recall_score(y_test, y_pred, average=\"micro\"),\n",
-    "        \"f1_score\": f1_score(y_test, y_pred, average=\"micro\"),\n",
+    "        \"precision\": precision_score(y_test, y_pred, average=\"weighted\"),\n",
+    "        \"recall\": recall_score(y_test, y_pred, average=\"weighted\"),\n",
+    "        \"f1_score\": f1_score(y_test, y_pred, average=\"weighted\"),\n",
     "    }\n",
     "\n",
     "    logging.info(metrics_dict)\n",
@@ -442,7 +452,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -463,7 +473,13 @@
     "@dsl.component(\n",
     "    packages_to_install=[\"pandas\", \"scikit-learn\"], base_image=\"python:3.10.7-slim\"\n",
     ")\n",
-    "def predict_rf(model: Input[Model], features: Input[Dataset], results: Output[Dataset]):\n",
+    "def predict_rf(\n",
+    "    model: Input[Model],\n",
+    "    features: Input[Dataset],\n",
+    "    scaler_model: Input[Model],\n",
+    "    pca_model: Input[Model],\n",
+    "    results: Output[Dataset],\n",
+    "):\n",
     "    import pandas as pd\n",
     "    import pickle\n",
     "    import json\n",
@@ -475,15 +491,23 @@
     "\n",
     "    df = pd.read_csv(features.path + \".csv\")\n",
     "\n",
-    "    filename = model.path + \".pkl\"\n",
-    "\n",
     "    # Loading the saved model\n",
-    "    model_rf = pickle.load(open(filename, \"rb\"))\n",
+    "    model_rf = pickle.load(open(model.path + \".pkl\", \"rb\"))\n",
+    "    scaler = pickle.load(open(scaler_model.path + \".pkl\", \"rb\"))\n",
+    "    pca = pickle.load(open(pca_model.path + \".pkl\", \"rb\"))\n",
     "\n",
-    "    X_test = df.drop(\"quality\", axis = 1)\n",
+    "    X_test = df.drop(\"quality\", axis=1)\n",
+    "\n",
+    "    # transform the test data\n",
+    "    scaled_features = pd.DataFrame(\n",
+    "        scaler.transform(X_test),\n",
+    "        columns=X_test.columns,\n",
+    "        index=X_test.index,\n",
+    "    )\n",
+    "    X_test_pca = pd.DataFrame(pca.transform(scaled_features))\n",
     "\n",
     "    df_complete = df.copy()\n",
-    "    y_pred = model_rf.predict(X_test)\n",
+    "    y_pred = model_rf.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
     "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
@@ -508,7 +532,11 @@
     "    packages_to_install=[\"pandas\", \"scikit-learn\"], base_image=\"python:3.10.7-slim\"\n",
     ")\n",
     "def predict_gbc(\n",
-    "    model: Input[Model], features: Input[Dataset], results: Output[Dataset]\n",
+    "    model: Input[Model],\n",
+    "    features: Input[Dataset],\n",
+    "    scaler_model: Input[Model],\n",
+    "    pca_model: Input[Model],\n",
+    "    results: Output[Dataset],\n",
     "):\n",
     "    import pandas as pd\n",
     "    import pickle\n",
@@ -521,18 +549,27 @@
     "\n",
     "    df = pd.read_csv(features.path + \".csv\")\n",
     "\n",
-    "    filename = model.path + \".pkl\"\n",
-    "\n",
     "    # Loading the saved model\n",
-    "    model_gbc = pickle.load(open(filename, \"rb\"))\n",
+    "    model_gbc = pickle.load(open(model.path + \".pkl\", \"rb\"))\n",
+    "    scaler = pickle.load(open(scaler_model.path + \".pkl\", \"rb\"))\n",
+    "    pca = pickle.load(open(pca_model.path + \".pkl\", \"rb\"))\n",
     "\n",
-    "    X_test = df.drop(\"quality\", axis = 1)\n",
+    "    X_test = df.drop(\"quality\", axis=1)\n",
+    "\n",
+    "    # transform the test data\n",
+    "    scaled_features = pd.DataFrame(\n",
+    "        scaler.transform(X_test),\n",
+    "        columns=X_test.columns,\n",
+    "        index=X_test.index,\n",
+    "    )\n",
+    "\n",
+    "    X_test_pca = pd.DataFrame(pca.transform(scaled_features))\n",
     "\n",
     "    df_complete = df.copy()\n",
-    "    y_pred = model_gbc.predict(X_test)\n",
+    "    y_pred = model_gbc.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -562,7 +599,7 @@
     "    if rf_metrics.get(\"f1_score\") > gbc_metrics.get(\"f1_score\"):\n",
     "        return \"rf_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\"\n"
+    "        return \"gbc_gs\""
    ]
   },
   {
@@ -599,7 +636,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
    ]
   },
   {
@@ -624,6 +661,7 @@
     "    data_bucket: str,\n",
     "    dataset_filename: str,\n",
     "    model_repo: str,\n",
+    "    prediction_set: str,\n",
     "):\n",
     "    di_op = download_data(\n",
     "        project_id=project_id, bucket=data_bucket, file_name=dataset_filename\n",
@@ -631,21 +669,22 @@
     "\n",
     "    pca_job_run_op = PCA(standard_features=di_op.outputs[\"dataset\"])\n",
     "\n",
-    "    tts_job_run_op = train_test_split(dataset=pca_job_run_op.outputs[\"pca_features\"], level=0.1, method=True)\n",
-    "    tts_job_run_op2 = train_test_split(dataset=tts_job_run_op.outputs[\"dataset_train_X\"], level = 0.2, method=False)\n",
+    "    tts_job_run_op = train_test_split(\n",
+    "        dataset=pca_job_run_op.outputs[\"pca_features\"], level=0.2\n",
+    "    )\n",
     "\n",
     "    training_rf_job_run_op = train_rf(\n",
-    "        train_features_X=tts_job_run_op2.outputs[\"dataset_train_X\"],\n",
-    "        train_features_y=tts_job_run_op2.outputs[\"dataset_train_y\"],\n",
-    "        test_features_X=tts_job_run_op2.outputs[\"dataset_test_X\"],\n",
-    "        test_features_y=tts_job_run_op2.outputs[\"dataset_test_y\"],\n",
+    "        train_features_X=tts_job_run_op.outputs[\"dataset_train_X\"],\n",
+    "        train_features_y=tts_job_run_op.outputs[\"dataset_train_y\"],\n",
+    "        test_features_X=tts_job_run_op.outputs[\"dataset_test_X\"],\n",
+    "        test_features_y=tts_job_run_op.outputs[\"dataset_test_y\"],\n",
     "    )\n",
     "\n",
     "    training_gbc_job_run_op = train_gbc(\n",
-    "        train_features_X=tts_job_run_op2.outputs[\"dataset_train_X\"],\n",
-    "        train_features_y=tts_job_run_op2.outputs[\"dataset_train_y\"],\n",
-    "        test_features_X=tts_job_run_op2.outputs[\"dataset_test_X\"],\n",
-    "        test_features_y=tts_job_run_op2.outputs[\"dataset_test_y\"],\n",
+    "        train_features_X=tts_job_run_op.outputs[\"dataset_train_X\"],\n",
+    "        train_features_y=tts_job_run_op.outputs[\"dataset_train_y\"],\n",
+    "        test_features_X=tts_job_run_op.outputs[\"dataset_test_X\"],\n",
+    "        test_features_y=tts_job_run_op.outputs[\"dataset_test_y\"],\n",
     "    )\n",
     "\n",
     "    comp_model__op = compare_model(\n",
@@ -653,11 +692,17 @@
     "        gbc_metrics=training_gbc_job_run_op.outputs[\"metrics\"],\n",
     "    ).after(training_rf_job_run_op, training_gbc_job_run_op)\n",
     "\n",
+    "    prediction_set_op = download_data(\n",
+    "        project_id=project_id, bucket=data_bucket, file_name=prediction_set\n",
+    "    )\n",
+    "\n",
     "    # defining the branching condition\n",
     "    with dsl.If(comp_model__op.output == \"rf_gs\"):\n",
     "        predict_rf_job_run_op = predict_rf(\n",
     "            model=training_rf_job_run_op.outputs[\"out_model\"],\n",
-    "            features=tts_job_run_op.outputs[\"dataset_test_X\"],\n",
+    "            features=prediction_set_op.outputs[\"dataset\"],\n",
+    "            scaler_model=pca_job_run_op.outputs[\"scaler_model\"],\n",
+    "            pca_model=pca_job_run_op.outputs[\"pca_model\"],\n",
     "        )\n",
     "        upload_model_rf_to_gc_op = upload_model_to_gcs(\n",
     "            project_id=project_id,\n",
@@ -668,13 +713,15 @@
     "    with dsl.If(comp_model__op.output == \"gbc_gs\"):\n",
     "        predict_gbc_job_run_op = predict_gbc(\n",
     "            model=training_gbc_job_run_op.outputs[\"out_model\"],\n",
-    "            features=tts_job_run_op.outputs[\"dataset_test_X\"],\n",
+    "            features=prediction_set_op.outputs[\"dataset\"],\n",
+    "            scaler_model=pca_job_run_op.outputs[\"scaler_model\"],\n",
+    "            pca_model=pca_job_run_op.outputs[\"pca_model\"],\n",
     "        )\n",
     "        upload_model_gbc_to_gc_op = upload_model_to_gcs(\n",
     "            project_id=project_id,\n",
     "            model_repo=model_repo,\n",
     "            model=training_gbc_job_run_op.outputs[\"out_model\"],\n",
-    "        ).after(predict_gbc_job_run_op)\n"
+    "        ).after(predict_gbc_job_run_op)"
    ]
   },
   {
@@ -697,7 +744,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -764,10 +811,11 @@
     "        \"data_bucket\": \"data_de2023_2065718\",  # makesure to use your data bucket name\n",
     "        \"dataset_filename\": \"train_data.csv\",  # makesure to upload these to your data bucket from DE2023\n",
     "        \"model_repo\": \"models_de2023_2065718\",  # makesure to use your model bucket name\n",
+    "        \"prediction_set\": \"test_data.csv\",  # makesure to use your data bucket name\n",
     "    },\n",
     ")\n",
     "\n",
-    "job.run()\n"
+    "job.run()"
    ]
   },
   {
