prediction set fix

--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -108,7 +108,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types"
+    "from google_cloud_pipeline_components.types import artifact_types\n"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_2065718\"\n"
+    "PIPELINE_ROOT = \"gs://data_de2023_2065718\""
    ]
   },
   {
@@ -169,7 +169,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")"
+    "    logging.info(\"Downloaded Data!\")\n"
    ]
   },
   {
@@ -368,7 +368,7 @@
     "        pickle.dump(rf_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -452,7 +452,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -599,7 +599,7 @@
     "    if rf_metrics.get(\"f1_score\") > gbc_metrics.get(\"f1_score\"):\n",
     "        return \"rf_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\""
+    "        return \"gbc_gs\"\n"
    ]
   },
   {
@@ -636,7 +636,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
    ]
   },
   {
@@ -744,7 +744,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -811,7 +811,7 @@
     "        \"data_bucket\": \"data_de2023_2065718\",  # makesure to use your data bucket name\n",
     "        \"dataset_filename\": \"train_data.csv\",  # makesure to upload these to your data bucket from DE2023\n",
     "        \"model_repo\": \"models_de2023_2065718\",  # makesure to use your model bucket name\n",
-    "        \"prediction_set\": \"test_data.csv\",  # makesure to use your data bucket name\n",
+    "        \"prediction_set\": \"predict_data.csv\",  # makesure to use your data bucket name\n",
     "    },\n",
     ")\n",
     "\n",
