--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -108,7 +108,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types\n"
+    "from google_cloud_pipeline_components.types import artifact_types"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_2065718\""
+    "PIPELINE_ROOT = \"gs://data_de2023_2065718\"\n"
    ]
   },
   {
@@ -169,7 +169,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")\n"
+    "    logging.info(\"Downloaded Data!\")"
    ]
   },
   {
@@ -314,7 +314,13 @@
     ") -> NamedTuple(\"outputs\", metrics=dict):\n",
     "    \"\"\" \"\"\"\n",
     "    from sklearn.ensemble import RandomForestClassifier\n",
-    "    from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "    from sklearn.metrics import (\n",
+    "        accuracy_score,\n",
+    "        precision_score,\n",
+    "        recall_score,\n",
+    "        f1_score,\n",
+    "        mean_absolute_error,\n",
+    "    )\n",
     "    from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "    import pandas as pd\n",
@@ -354,6 +360,7 @@
     "        \"precision\": precision_score(y_test, y_pred, average=\"weighted\"),\n",
     "        \"recall\": recall_score(y_test, y_pred, average=\"weighted\"),\n",
     "        \"f1_score\": f1_score(y_test, y_pred, average=\"weighted\"),\n",
+    "        \"mae\": mean_absolute_error(y_test, y_pred),\n",
     "    }\n",
     "\n",
     "    logging.info(metrics_dict)\n",
@@ -368,7 +375,7 @@
     "        pickle.dump(rf_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -398,7 +405,13 @@
     ") -> NamedTuple(\"outputs\", metrics=dict):\n",
     "    \"\"\" \"\"\"\n",
     "    from sklearn.ensemble import GradientBoostingClassifier\n",
-    "    from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "    from sklearn.metrics import (\n",
+    "        accuracy_score,\n",
+    "        precision_score,\n",
+    "        recall_score,\n",
+    "        f1_score,\n",
+    "        mean_absolute_error,\n",
+    "    )\n",
     "    from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "    import pandas as pd\n",
@@ -438,6 +451,7 @@
     "        \"precision\": precision_score(y_test, y_pred, average=\"weighted\"),\n",
     "        \"recall\": recall_score(y_test, y_pred, average=\"weighted\"),\n",
     "        \"f1_score\": f1_score(y_test, y_pred, average=\"weighted\"),\n",
+    "        \"mae\": mean_absolute_error(y_test, y_pred),\n",
     "    }\n",
     "\n",
     "    logging.info(metrics_dict)\n",
@@ -452,7 +466,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -599,7 +613,7 @@
     "    if rf_metrics.get(\"f1_score\") > gbc_metrics.get(\"f1_score\"):\n",
     "        return \"rf_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\"\n"
+    "        return \"gbc_gs\""
    ]
   },
   {
@@ -636,7 +650,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
    ]
   },
   {
@@ -744,7 +758,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
