rf replaced with mlp

--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -108,7 +108,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types"
+    "from google_cloud_pipeline_components.types import artifact_types\n"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_2065718\"\n"
+    "PIPELINE_ROOT = \"gs://data_de2023_2065718\""
    ]
   },
   {
@@ -169,7 +169,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")"
+    "    logging.info(\"Downloaded Data!\")\n"
    ]
   },
   {
@@ -216,7 +216,7 @@
     "    X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -284,7 +284,7 @@
     "        # Save the scaler\n",
     "    p_file = pca_model.path + \".pkl\"\n",
     "    with open(p_file, \"wb\") as f:\n",
-    "        pickle.dump(pca, f)"
+    "        pickle.dump(pca, f)\n"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "id": "788b8dd4-6b1c-4cca-ac6a-e3aa2f30dfb5",
    "metadata": {},
    "source": [
-    "#### Pipeline Component : Training-RF "
+    "#### Pipeline Component : Training-MLP "
    ]
   },
   {
@@ -305,7 +305,7 @@
     "@dsl.component(\n",
     "    packages_to_install=[\"pandas\", \"scikit-learn\"], base_image=\"python:3.10.7-slim\"\n",
     ")\n",
-    "def train_rf(\n",
+    "def train_mlp(\n",
     "    train_features_X: Input[Dataset],\n",
     "    test_features_X: Input[Dataset],\n",
     "    train_features_y: Input[Dataset],\n",
@@ -313,7 +313,7 @@
     "    out_model: Output[Model],\n",
     ") -> NamedTuple(\"outputs\", metrics=dict):\n",
     "    \"\"\" \"\"\"\n",
-    "    from sklearn.ensemble import RandomForestClassifier\n",
+    "    from sklearn.neural_network import MLPClassifier\n",
     "    from sklearn.metrics import (\n",
     "        accuracy_score,\n",
     "        precision_score,\n",
@@ -338,23 +338,34 @@
     "    logging.info(X_train.columns)\n",
     "\n",
     "    parameters = {\n",
-    "        \"n_estimators\": [100, 250],\n",
-    "        \"criterion\": [\"gini\", \"entropy\", \"log_loss\"],\n",
-    "        \"min_samples_split\": [2, 5, 10],\n",
-    "        \"min_samples_leaf\": [1, 5, 10],\n",
+    "        \"hidden_layer_sizes\": [\n",
+    "            (100,),\n",
+    "            (250,),\n",
+    "            (\n",
+    "                100,\n",
+    "                100,\n",
+    "            ),\n",
+    "            (\n",
+    "                250,\n",
+    "                250,\n",
+    "            ),\n",
+    "        ],\n",
+    "        \"solver\": [\"sgd\", \"adam\"],\n",
+    "        \"max_iter\": [100, 300, 500],\n",
+    "        \"alpha\": [0.01, 0.0001],\n",
     "    }\n",
     "\n",
-    "    rf = RandomForestClassifier(random_state=6)\n",
-    "    rf_gs = GridSearchCV(rf, parameters)\n",
-    "    rf_gs.fit(X_train, y_train)\n",
-    "    best_params = rf_gs.best_params_\n",
+    "    mlp = MLPClassifier(random_state=6)\n",
+    "    mlp_gs = GridSearchCV(mlp, parameters)\n",
+    "    mlp_gs.fit(X_train, y_train)\n",
+    "    best_params = mlp_gs.best_params_\n",
     "\n",
     "    X_test = pd.read_csv(test_features_X.path + \".csv\")\n",
     "    y_test = pd.read_csv(test_features_y.path + \".csv\")\n",
     "\n",
     "    # Predicting Test Set\n",
     "\n",
-    "    y_pred = rf_gs.predict(X_test)\n",
+    "    y_pred = mlp_gs.predict(X_test)\n",
     "    metrics_dict = {\n",
     "        \"accuracy\": accuracy_score(y_test, y_pred),\n",
     "        \"precision\": precision_score(y_test, y_pred, average=\"weighted\"),\n",
@@ -366,13 +377,13 @@
     "    logging.info(metrics_dict)\n",
     "\n",
     "    out_model.metadata[\"file_type\"] = \".pkl\"\n",
-    "    out_model.metadata[\"algo\"] = \"rf_gs\"\n",
+    "    out_model.metadata[\"algo\"] = \"mlp_gs\"\n",
     "    out_model.metadata[\"best_params\"] = best_params\n",
     "\n",
     "    # Save the model\n",
     "    m_file = out_model.path + \".pkl\"\n",
     "    with open(m_file, \"wb\") as f:\n",
-    "        pickle.dump(rf_gs, f)\n",
+    "        pickle.dump(mlp_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
     "    return outputs(metrics_dict)"
@@ -466,7 +477,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -474,7 +485,7 @@
    "id": "06696dbd",
    "metadata": {},
    "source": [
-    "#### Pipeline Component : Prediction-RF\n"
+    "#### Pipeline Component : Prediction-mlp\n"
    ]
   },
   {
@@ -487,7 +498,7 @@
     "@dsl.component(\n",
     "    packages_to_install=[\"pandas\", \"scikit-learn\"], base_image=\"python:3.10.7-slim\"\n",
     ")\n",
-    "def predict_rf(\n",
+    "def predict_mlp(\n",
     "    model: Input[Model],\n",
     "    features: Input[Dataset],\n",
     "    scaler_model: Input[Model],\n",
@@ -506,7 +517,7 @@
     "    df = pd.read_csv(features.path + \".csv\")\n",
     "\n",
     "    # Loading the saved model\n",
-    "    model_rf = pickle.load(open(model.path + \".pkl\", \"rb\"))\n",
+    "    model_mlp = pickle.load(open(model.path + \".pkl\", \"rb\"))\n",
     "    scaler = pickle.load(open(scaler_model.path + \".pkl\", \"rb\"))\n",
     "    pca = pickle.load(open(pca_model.path + \".pkl\", \"rb\"))\n",
     "\n",
@@ -521,10 +532,10 @@
     "    X_test_pca = pd.DataFrame(pca.transform(scaled_features))\n",
     "\n",
     "    df_complete = df.copy()\n",
-    "    y_pred = model_rf.predict(X_test_pca)\n",
+    "    y_pred = model_mlp.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -583,7 +594,7 @@
     "    y_pred = model_gbc.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -602,18 +613,18 @@
    "outputs": [],
    "source": [
     "@dsl.component(base_image=\"python:3.10.7-slim\")\n",
-    "def compare_model(rf_metrics: dict, gbc_metrics: dict) -> str:\n",
+    "def compare_model(mlp_metrics: dict, gbc_metrics: dict) -> str:\n",
     "    import logging\n",
     "    import json\n",
     "    import sys\n",
     "\n",
     "    logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
-    "    logging.info(rf_metrics)\n",
+    "    logging.info(mlp_metrics)\n",
     "    logging.info(gbc_metrics)\n",
-    "    if rf_metrics.get(\"f1_score\") > gbc_metrics.get(\"f1_score\"):\n",
-    "        return \"rf_gs\"\n",
+    "    if mlp_metrics.get(\"mae\") > gbc_metrics.get(\"mae\"):\n",
+    "        return \"mlp_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\""
+    "        return \"gbc_gs\"\n"
    ]
   },
   {
@@ -650,7 +661,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
    ]
   },
   {
@@ -687,7 +698,7 @@
     "        dataset=pca_job_run_op.outputs[\"pca_features\"], level=0.2\n",
     "    )\n",
     "\n",
-    "    training_rf_job_run_op = train_rf(\n",
+    "    training_mlp_job_run_op = train_mlp(\n",
     "        train_features_X=tts_job_run_op.outputs[\"dataset_train_X\"],\n",
     "        train_features_y=tts_job_run_op.outputs[\"dataset_train_y\"],\n",
     "        test_features_X=tts_job_run_op.outputs[\"dataset_test_X\"],\n",
@@ -702,27 +713,27 @@
     "    )\n",
     "\n",
     "    comp_model__op = compare_model(\n",
-    "        rf_metrics=training_rf_job_run_op.outputs[\"metrics\"],\n",
+    "        mlp_metrics=training_mlp_job_run_op.outputs[\"metrics\"],\n",
     "        gbc_metrics=training_gbc_job_run_op.outputs[\"metrics\"],\n",
-    "    ).after(training_rf_job_run_op, training_gbc_job_run_op)\n",
+    "    ).after(training_mlp_job_run_op, training_gbc_job_run_op)\n",
     "\n",
     "    prediction_set_op = download_data(\n",
     "        project_id=project_id, bucket=data_bucket, file_name=prediction_set\n",
     "    )\n",
     "\n",
     "    # defining the branching condition\n",
-    "    with dsl.If(comp_model__op.output == \"rf_gs\"):\n",
-    "        predict_rf_job_run_op = predict_rf(\n",
-    "            model=training_rf_job_run_op.outputs[\"out_model\"],\n",
+    "    with dsl.If(comp_model__op.output == \"mlp_gs\"):\n",
+    "        predict_mlp_job_run_op = predict_mlp(\n",
+    "            model=training_mlp_job_run_op.outputs[\"out_model\"],\n",
     "            features=prediction_set_op.outputs[\"dataset\"],\n",
     "            scaler_model=pca_job_run_op.outputs[\"scaler_model\"],\n",
     "            pca_model=pca_job_run_op.outputs[\"pca_model\"],\n",
     "        )\n",
-    "        upload_model_rf_to_gc_op = upload_model_to_gcs(\n",
+    "        upload_model_mlp_to_gc_op = upload_model_to_gcs(\n",
     "            project_id=project_id,\n",
     "            model_repo=model_repo,\n",
-    "            model=training_rf_job_run_op.outputs[\"out_model\"],\n",
-    "        ).after(predict_rf_job_run_op)\n",
+    "            model=training_mlp_job_run_op.outputs[\"out_model\"],\n",
+    "        ).after(predict_mlp_job_run_op)\n",
     "\n",
     "    with dsl.If(comp_model__op.output == \"gbc_gs\"):\n",
     "        predict_gbc_job_run_op = predict_gbc(\n",
@@ -735,7 +746,7 @@
     "            project_id=project_id,\n",
     "            model_repo=model_repo,\n",
     "            model=training_gbc_job_run_op.outputs[\"out_model\"],\n",
-    "        ).after(predict_gbc_job_run_op)"
+    "        ).after(predict_gbc_job_run_op)\n"
    ]
   },
   {
@@ -758,7 +769,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -829,7 +840,7 @@
     "    },\n",
     ")\n",
     "\n",
-    "job.run()"
+    "job.run()\n"
    ]
   },
   {
