fixed algorithm selection MAE

--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -108,7 +108,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types\n"
+    "from google_cloud_pipeline_components.types import artifact_types"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_2065718\""
+    "PIPELINE_ROOT = \"gs://data_de2023_2065718\"\n"
    ]
   },
   {
@@ -169,7 +169,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")\n"
+    "    logging.info(\"Downloaded Data!\")"
    ]
   },
   {
@@ -216,7 +216,7 @@
     "    X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -284,7 +284,7 @@
     "        # Save the scaler\n",
     "    p_file = pca_model.path + \".pkl\"\n",
     "    with open(p_file, \"wb\") as f:\n",
-    "        pickle.dump(pca, f)\n"
+    "        pickle.dump(pca, f)"
    ]
   },
   {
@@ -477,7 +477,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -535,7 +535,7 @@
     "    y_pred = model_mlp.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -594,7 +594,7 @@
     "    y_pred = model_gbc.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -621,10 +621,10 @@
     "    logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "    logging.info(mlp_metrics)\n",
     "    logging.info(gbc_metrics)\n",
-    "    if mlp_metrics.get(\"mae\") > gbc_metrics.get(\"mae\"):\n",
+    "    if mlp_metrics.get(\"mae\") < gbc_metrics.get(\"mae\"):\n",
     "        return \"mlp_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\"\n"
+    "        return \"gbc_gs\""
    ]
   },
   {
@@ -661,7 +661,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
    ]
   },
   {
@@ -746,7 +746,7 @@
     "            project_id=project_id,\n",
     "            model_repo=model_repo,\n",
     "            model=training_gbc_job_run_op.outputs[\"out_model\"],\n",
-    "        ).after(predict_gbc_job_run_op)\n"
+    "        ).after(predict_gbc_job_run_op)"
    ]
   },
   {
@@ -769,7 +769,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -840,7 +840,7 @@
     "    },\n",
     ")\n",
     "\n",
-    "job.run()\n"
+    "job.run()"
    ]
   },
   {
