pipeline markdown fix

--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -485,7 +485,7 @@
    "id": "06696dbd",
    "metadata": {},
    "source": [
-    "#### Pipeline Component : Prediction-mlp\n"
+    "#### Pipeline Component : Prediction-MLP\n"
    ]
   },
   {
