--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -95,7 +95,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types"
+    "from google_cloud_pipeline_components.types import artifact_types\n"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_20204025\"\n"
+    "PIPELINE_ROOT = \"gs://data_de2023_20204025\""
    ]
   },
   {
@@ -156,7 +156,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")"
+    "    logging.info(\"Downloaded Data!\")\n"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "    X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -222,14 +222,15 @@
    "outputs": [],
    "source": [
     "@dsl.component(\n",
-    "    packages_to_install=[\"pandas\", \"scikit-learn\", \"google-cloud-storage\"], base_image=\"python:3.10.7-slim\"\n",
+    "    packages_to_install=[\"pandas\", \"scikit-learn\", \"google-cloud-storage\"],\n",
+    "    base_image=\"python:3.10.7-slim\",\n",
     ")\n",
     "def PCA(\n",
     "    standard_features: Input[Dataset],\n",
     "    pca_features: Output[Dataset],\n",
     "    scaler_model: Output[Model],\n",
     "    pca_model: Output[Model],\n",
-    "    project_id: str, \n",
+    "    project_id: str,\n",
     "    model_repo: str,\n",
     "):\n",
     "    \"\"\" \"\"\"\n",
@@ -248,7 +249,7 @@
     "\n",
     "    scaler = StandardScaler()\n",
     "\n",
-    "    features = pd.read_csv(standard_features.path + \".csv\").drop('Unnamed: 0', axis = 1)\n",
+    "    features = pd.read_csv(standard_features.path + \".csv\").drop(\"Unnamed: 0\", axis=1)\n",
     "    train_features = features.drop(\"quality\", axis=1)\n",
     "    test_features = features[[\"quality\"]]\n",
     "    scaler.fit(train_features)\n",
@@ -258,7 +259,7 @@
     "        index=train_features.index,\n",
     "    )\n",
     "\n",
-    "    pca = PCA(n_components=0.1, svd_solver=\"full\")\n",
+    "    pca = PCA(n_components=4, svd_solver=\"full\")\n",
     "    pca.fit(scaled_features)\n",
     "    pca_df = pd.DataFrame(pca.transform(scaled_features))\n",
     "    result = pd.concat([pca_df, test_features], axis=1)\n",
@@ -274,17 +275,13 @@
     "    p_file = pca_model.path + \".pkl\"\n",
     "    with open(p_file, \"wb\") as f:\n",
     "        pickle.dump(pca, f)\n",
-    "        \n",
+    "\n",
     "    client = storage.Client(project=project_id)\n",
     "    bucket = client.bucket(model_repo)\n",
-    "    blob1 = bucket.blob(\n",
-    "        'scaler_model' + \".pkl\"\n",
-    "    )\n",
+    "    blob1 = bucket.blob(\"scaler_model\" + \".pkl\")\n",
     "    blob1.upload_from_filename(s_file)\n",
-    "    \n",
-    "    blob2 = bucket.blob(\n",
-    "        'pca_model' + \".pkl\"\n",
-    "    )\n",
+    "\n",
+    "    blob2 = bucket.blob(\"pca_model\" + \".pkl\")\n",
     "    blob2.upload_from_filename(p_file)"
    ]
   },
@@ -387,7 +384,7 @@
     "        pickle.dump(mlp_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -478,7 +475,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)"
+    "    return outputs(metrics_dict)\n"
    ]
   },
   {
@@ -515,7 +512,7 @@
     "\n",
     "    logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "\n",
-    "    df = pd.read_csv(features.path + \".csv\").drop('Unnamed: 0', axis = 1)\n",
+    "    df = pd.read_csv(features.path + \".csv\").drop(\"Unnamed: 0\", axis=1)\n",
     "\n",
     "    # Loading the saved model\n",
     "    model_mlp = pickle.load(open(model.path + \".pkl\", \"rb\"))\n",
@@ -573,7 +570,7 @@
     "\n",
     "    logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "\n",
-    "    df = pd.read_csv(features.path + \".csv\").drop('Unnamed: 0', axis = 1)\n",
+    "    df = pd.read_csv(features.path + \".csv\").drop(\"Unnamed: 0\", axis=1)\n",
     "\n",
     "    # Loading the saved model\n",
     "    model_gbc = pickle.load(open(model.path + \".pkl\", \"rb\"))\n",
@@ -625,7 +622,7 @@
     "    if mlp_metrics.get(\"mae\") < gbc_metrics.get(\"mae\"):\n",
     "        return \"mlp_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\""
+    "        return \"gbc_gs\"\n"
    ]
   },
   {
@@ -662,7 +659,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
    ]
   },
   {
@@ -693,9 +690,11 @@
     "        project_id=project_id, bucket=data_bucket, file_name=dataset_filename\n",
     "    )\n",
     "\n",
-    "    pca_job_run_op = PCA(project_id=project_id,\n",
-    "                         model_repo=model_repo,\n",
-    "                         standard_features=di_op.outputs[\"dataset\"])\n",
+    "    pca_job_run_op = PCA(\n",
+    "        project_id=project_id,\n",
+    "        model_repo=model_repo,\n",
+    "        standard_features=di_op.outputs[\"dataset\"],\n",
+    "    )\n",
     "\n",
     "    tts_job_run_op = train_test_split(\n",
     "        dataset=pca_job_run_op.outputs[\"pca_features\"], level=0.2\n",
@@ -772,7 +771,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -845,7 +844,7 @@
     "    },\n",
     ")\n",
     "\n",
-    "job.run()"
+    "job.run()\n"
    ]
   },
   {
