improve api to app.py

--- a/models/wine_quality_classification.ipynb
+++ b/models/wine_quality_classification.ipynb
@@ -95,7 +95,7 @@
     "    InputPath,\n",
     ")\n",
     "import google.cloud.aiplatform as aip\n",
-    "from google_cloud_pipeline_components.types import artifact_types\n"
+    "from google_cloud_pipeline_components.types import artifact_types"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "# The region that this pipeline runs in\n",
     "REGION = \"us-central1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "PIPELINE_ROOT = \"gs://data_de2023_20204025\""
+    "PIPELINE_ROOT = \"gs://data_de2023_20204025\"\n"
    ]
   },
   {
@@ -156,7 +156,7 @@
     "    bucket = client.bucket(bucket)\n",
     "    blob = bucket.blob(file_name)\n",
     "    blob.download_to_filename(dataset.path + \".csv\")\n",
-    "    logging.info(\"Downloaded Data!\")\n"
+    "    logging.info(\"Downloaded Data!\")"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "    X_train.to_csv(dataset_train_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    X_test.to_csv(dataset_test_X.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
     "    y_train.to_csv(dataset_train_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "    y_test.to_csv(dataset_test_y.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -282,7 +282,7 @@
     "    blob1.upload_from_filename(s_file)\n",
     "\n",
     "    blob2 = bucket.blob(\"pca_model\" + \".pkl\")\n",
-    "    blob2.upload_from_filename(p_file)"
+    "    blob2.upload_from_filename(p_file)\n"
    ]
   },
   {
@@ -384,7 +384,7 @@
     "        pickle.dump(mlp_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -475,7 +475,7 @@
     "        pickle.dump(gbc_gs, f)\n",
     "\n",
     "    outputs = NamedTuple(\"outputs\", metrics=dict)\n",
-    "    return outputs(metrics_dict)\n"
+    "    return outputs(metrics_dict)"
    ]
   },
   {
@@ -533,7 +533,7 @@
     "    y_pred = model_mlp.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -592,7 +592,7 @@
     "    y_pred = model_gbc.predict(X_test_pca)\n",
     "    logging.info(y_pred)\n",
     "    df_complete[\"pclass\"] = y_pred.tolist()\n",
-    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")"
+    "    df_complete.to_csv(results.path + \".csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -622,7 +622,7 @@
     "    if mlp_metrics.get(\"mae\") < gbc_metrics.get(\"mae\"):\n",
     "        return \"mlp_gs\"\n",
     "    else:\n",
-    "        return \"gbc_gs\"\n"
+    "        return \"gbc_gs\""
    ]
   },
   {
@@ -659,7 +659,7 @@
     "    )\n",
     "    blob.upload_from_filename(model.path + str(model.metadata[\"file_type\"]))\n",
     "\n",
-    "    print(\"Saved the model to GCP bucket : \" + model_repo)"
+    "    print(\"Saved the model to GCP bucket : \" + model_repo)\n"
    ]
   },
   {
@@ -748,7 +748,7 @@
     "            project_id=project_id,\n",
     "            model_repo=model_repo,\n",
     "            model=training_gbc_job_run_op.outputs[\"out_model\"],\n",
-    "        ).after(predict_gbc_job_run_op)"
+    "        ).after(predict_gbc_job_run_op)\n"
    ]
   },
   {
@@ -771,7 +771,7 @@
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline,\n",
     "    package_path=\"winequality_predictor_training_pipeline_v1.yaml\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -844,7 +844,7 @@
     "    },\n",
     ")\n",
     "\n",
-    "job.run()\n"
+    "job.run()"
    ]
   },
   {
